syntax = "proto3";

package com.romanostrechlis.scribe.api;
option go_package = "api";

service CLIScribe {
    rpc GetVersion(VersionRequest) returns (VersionResponse) {}
    rpc GetStats(StatsRequest) returns (StatsResponse) {}
    rpc GetScribesResponsibility(ResponsibilityRequest) returns (ResponsibilityResponse) {}
}

message VersionRequest {
    bool all = 1;
}

message VersionResponse {
    repeated Version results = 1;
}

enum Type {
    MEDIATOR = 0;
    SCRIBE = 1;
}

message Version {
    Type type = 1;
    string name = 2;
    string version = 3;
}

message StatsRequest {}

message StatsResponse {
    message Result {
        string name = 1;
        int64 count = 2;
    }
    repeated Result result = 1;
}

message ResponsibilityRequest {}

message ResponsibilityResponse {
    message Result {
        string name = 1;
        string responsibility = 2;
    }
    repeated Result result = 1;
}
